opam-version: "2.0"

name: "ranger"
version: "0.0.1"
maintainer: "rudi.grinberg@gmail.com"
authors: "Rudi Grinberg"
license: "MIT"

homepage: "https://github.com/rgrinberg/ranger"
bug-reports: "https://github.com/rgrinberg/ranger/issues"
dev-repo: "git+https://github.com/rgrinberg/ranger.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs
    "@install"
    "@doc" {with-doc}
    "@runtest" {with-test}]
]
depends: [
  "ocaml" {>= "4.02"}
  "dune" {>= "1.11"}
  "kaputt" {with-test}
  "base-bytes"
]
synopsis: "A consecutive range slice library for strings, arrays, etc"
description: """The main type provided by ranger generalizes substrings to arbitrary data structures that are "indexed" by an integer. The biggest difference between ranger and other libraries like it (e.g. various Substring functors) is that ranger doesn't use functors and is polymorphic over the base type (e.g. char in the case of substrings)."""
